add datepicker (wip)

--- a/examples/vanilla/index.html
+++ b/examples/vanilla/index.html
@@ -85,6 +85,9 @@
             <div class="item" style="margin-top: 8px">
                 <material-tabs useLine="true" tabs="[\{title:'ONE'\},\{title:'TWO'\}]"></material-tabs>
             </div>
+			<div class="item" style="margin-top: 8px">
+                <material-datepicker>toto</material-datepicker>
+            </div>
             <!--<div class="item" style="margin-top: 8px">
                 <material-loader></material-loader>
             </div>-->
